--- a/login.html
+++ b/login.html
@@ -8,15 +8,14 @@
 
 <div class="card">
 <h2>Login</h2>
-
-<input type="email" id="email" placeholder="Email">
-<input type="password" id="password" placeholder="Password">
+<input id="email" placeholder="Email">
+<input id="password" type="password" placeholder="Password">
 <button onclick="login()">Login</button>
 
 <p class="note">
-Demo Login<br>
-Email: user@example.com<br>
-Password: 123456
+User: user@example.com<br>
+Pass: 123456<br>
+Admin: admin@example.com
 </p>
 </div>
 
