--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Women Safety</title>
 <link rel="stylesheet" href="css/style.css">
 <link rel="manifest" href="manifest.json">
@@ -11,21 +13,16 @@
 <h2>Women Safety</h2>
 <a href="index.html">Home</a>
 <a href="laws.html">Rules & Laws</a>
-<a href="login.html">Login</a>
+<a href="dashboard.html">Dashboard</a>
 <a href="chatbot.html">Help Bot</a>
+<a href="login.html">Login</a>
 </nav>
 
 <section class="hero">
-<h1>Your Safety Matters</h1>
-<p>Educate • Protect • Empower</p>
-<button onclick="alert('📱 App Installed from browser menu')">Install App</button>
+<h1>Protect • Educate • Empower</h1>
+<p>Your safety is your right!</p>
+<button onclick="alert('App install simulated for PWA')">Install App</button>
 </section>
-
-<script>
-if ('serviceWorker' in navigator) {
-  navigator.serviceWorker.register('service-worker.js');
-}
-</script>
 
 </body>
 </html>
