--- a/laws.html
+++ b/laws.html
@@ -59,6 +59,14 @@
 
 <body class="bg-pink-50">
 
+<div class="container mt-4">
+  <div class="card p-3 shadow">
+    <h5>🤔 Did You Know?</h5>
+    <p>You can call 112 even without balance or SIM.</p>
+  </div>
+</div>
+
+
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-danger px-3">
   <a class="navbar-brand fw-bold">Women Safety</a>
