--- a/laws.html
+++ b/laws.html
@@ -54,6 +54,34 @@
   animation: gradientMove 10s ease infinite;
 }
 
+<div class="container mt-5">
+  <h3 class="text-center text-danger">📜 Timeline of Women Safety Laws</h3>
+
+  <div class="timeline">
+    <div class="timeline-item left">
+      <div class="content">
+        <h5>2005</h5>
+        <p>Domestic Violence Act</p>
+      </div>
+    </div>
+
+    <div class="timeline-item right">
+      <div class="content">
+        <h5>2013</h5>
+        <p>Sexual Harassment at Workplace Act</p>
+      </div>
+    </div>
+
+    <div class="timeline-item left">
+      <div class="content">
+        <h5>2018</h5>
+        <p>Cyber Crime Protection</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 </style>
 </head>
 
