--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
 </div>
 </nav>
 
+<button id="installBtn"
+        onclick="installApp()"
+        style="display:none; padding:10px; background:#ff4081; color:white; border:none; border-radius:10px;">
+📲 Install App
+</button>
+
+
 <section class="text-center p-5">
 <h1 class="text-4xl font-bold text-pink-600">Protect • Educate • Empower</h1>
 <p class="mt-3">A digital safety & awareness platform</p>
