--- a/login.html
+++ b/login.html
@@ -1,4 +1,5 @@
 <hr>
+<script src="js/auth.js"></script>
 
 <button type="button" class="social-btn google" onclick="socialLogin('Google')">
   🔴 Continue with Google
