--- a/dashboard.html
+++ b/dashboard.html
@@ -56,5 +56,17 @@
 <script src="js/fakecall.js"></script>
 <script src="js/panic.js"></script>
 <script src="js/maps.js"></script>
+<script>
+  const user = localStorage.getItem("loggedInUser");
+  const type = localStorage.getItem("loginType") || "Email";
+
+  if (!user) {
+    window.location.href = "login.html";
+  }
+
+  document.getElementById("userName").innerText = user;
+  document.getElementById("loginType").innerText = type;
+</script>
+
 </body>
 </html>
