--- a/login.html
+++ b/login.html
@@ -1,18 +1,34 @@
-<hr>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8">
+<title>Women Safety | Login</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link rel="stylesheet" href="css/style.css">
+</head>
+
+<body class="login-body">
+
+<div class="login-card">
+  <h2>👩 Women Safety Login</h2>
+  <p class="subtitle">Access your safety dashboard</p>
+
+  <form id="loginForm">
+    <input type="text" id="name" placeholder="Full Name" required>
+
+    <input type="email" id="email" placeholder="Email Address" required>
+
+    <input type="password" id="password" placeholder="Password (min 6 chars)" required>
+
+    <button type="submit">Login</button>
+  </form>
+
+  <p class="note">
+    This project uses frontend authentication (Demo Purpose)
+  </p>
+</div>
+
 <script src="js/auth.js"></script>
-
-<button type="button" class="social-btn google" onclick="socialLogin('Google')">
-  🔴 Continue with Google
-</button>
-
-<button type="button" class="social-btn github" onclick="socialLogin('GitHub')">
-  ⚫ Continue with GitHub
-</button>
-
-<button type="button" class="social-btn facebook" onclick="socialLogin('Facebook')">
-  🔵 Continue with Facebook
-</button>
-
-<button type="button" class="social-btn instagram" onclick="socialLogin('Instagram')">
-  🟣 Continue with Instagram
-</button>
+</body>
+</html>
