--- a/dashboard.html
+++ b/dashboard.html
@@ -17,6 +17,8 @@
     <a href="dashboard.html">Dashboard</a>
     <a href="laws.html">Know Your Rights</a>
     <a href="chatbot.html">Support Bot</a>
+    <button onclick="toggleTheme()" class="theme-btn">🌙</button>
+
     <button onclick="logout()" class="logout-btn">Logout</button>
   </div>
 </nav>
