--- a/dashboard.html
+++ b/dashboard.html
@@ -26,6 +26,17 @@
 <!-- ===== MAIN DASHBOARD ===== -->
 <div class="dashboard-container">
 
+  <div class="card">
+  <h3>📞 Emergency Contacts</h3>
+  <ul>
+    <li>Police: <b>100</b></li>
+    <li>Women Helpline: <b>181</b></li>
+    <li>Ambulance: <b>108</b></li>
+    <li>Child Helpline: <b>1098</b></li>
+  </ul>
+</div>
+
+
   <!-- Profile Card -->
   <div class="card">
     <h3>👤 Profile Information</h3>
