--- a/dashboard.html
+++ b/dashboard.html
@@ -27,6 +27,11 @@
 <div class="dashboard-container">
 
   <div class="card">
+  <h3>📊 Awareness Progress</h3>
+  <canvas id="progressChart"></canvas>
+</div>
+
+  <div class="card">
   <h3>📞 Emergency Contacts</h3>
   <ul>
     <li>Police: <b>100</b></li>
