--- a/login.html
+++ b/login.html
@@ -29,6 +29,13 @@
   </p>
 </div>
 
+if (email.includes("admin")) {
+  localStorage.setItem("role", "admin");
+} else {
+  localStorage.setItem("role", "user");
+}
+
+
 <script src="js/auth.js"></script>
 </body>
 </html>
