--- a/laws.html
+++ b/laws.html
@@ -87,6 +87,16 @@
 
 <body class="bg-pink-50">
 
+<h2 class="center">📜 Women Safety Laws Timeline</h2>
+
+<div class="timeline">
+  <div class="event">IPC 354 – Assault on Women</div>
+  <div class="event">Domestic Violence Act</div>
+  <div class="event">Cyber Crime Act</div>
+  <div class="event">POSH Act</div>
+</div>
+
+
 <!-- Language Selector -->
 <div style="text-align:center; margin:15px;">
   <select onchange="setLanguage(this.value)">
