--- a/chatbot.html
+++ b/chatbot.html
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+<h2>🤖 Women Safety Quiz Bot</h2>
+
+<div id="chatbox"></div>
+
+<button onclick="startQuiz()">Start Quiz</button>
+
 <div class="card">
 <h2>Help Bot 🤖</h2>
 <input type="text" id="userInput" placeholder="Ask for help">
