--- a/laws.html
+++ b/laws.html
@@ -14,6 +14,15 @@
 <!-- Icons -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
+<select id="languageSelect">
+  <option value="en-IN">English</option>
+  <option value="ta-IN">Tamil</option>
+  <option value="hi-IN">Hindi</option>
+</select>
+
+<button onclick="readLaws()">🔊 Read Aloud</button>
+<button onclick="stopReading()">⏹ Stop</button>
+
 <style>
 /* 🌈 Gradient Header */
 .hero {
